# music-theory

./: .gitignore  README.rst  requirements.txt  setup.cfg
json/: chords.json  keys.json  pitch.json  scale.json
src/: chord.py  dump2json.py  key.py  mode.py  note.py  octave.py  piano.py  pitch.py  roman_notation.py  scale.py
tests/: test_chord.py  test_note.py  test_scale.py
