[metadata]
name = music-theory
version = 0.0.1
author = Matt Couchman
author_email = matt.couchman@gmail.com
description = Classes, objects and utilities representing western music theory.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/grzniuk/music-theory
classifiers =
    License :: GNU General Public License v3.0
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
